# MachineObservation

./: CMakeLists.txt  README.md  csv-related.cpp  csvgraphics.h  csvgraphicsData.h  data.cpp  defineVariables.cpp  graphics.cpp  loop.cpp  main.cpp  miscFunc.cpp  modesStates.cpp  mouseFuncs.cpp  overlap.h  testFunctions.cpp  txt-related.cpp
Demo/: Demo.md
data/: ReadMe.md
